<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="pref_key">
    <PreferenceCategory 
        android:title="@string/prefcat_emu"
        android:key="prefcat_emu">
		<ListPreference
			android:key="pref_pcsx_rearmed_region"
			android:title="@string/pref_pcsx_rearmed_region"
			android:summary="@string/pref_pcsx_rearmed_region_summ"
			android:entries="@array/pref_pcsx_rearmed_region_entries"
			android:entryValues="@array/pref_pcsx_rearmed_region_values"
			android:defaultValue="@string/pref_pcsx_rearmed_region_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_drc"
			android:title="@string/pref_pcsx_rearmed_drc"
			android:summary="@string/pref_pcsx_rearmed_drc_summ"
			android:entries="@array/pref_pcsx_rearmed_enabled_disabled_entries"
			android:entryValues="@array/pref_pcsx_rearmed_enabled_disabled_values"
			android:defaultValue="@string/pref_pcsx_rearmed_drc_default"
			android:persistent="true"
			/>
		<EditTextPreference
			android:key="pref_pcsx_rearmed_bios_dir"
			android:title="@string/pref_pcsx_rearmed_bios_dir"
			android:summary="@string/pref_pcsx_rearmed_bios_dir_summ"
			android:defaultValue="@string/pref_pcsx_rearmed_path_default"
			android:persistent="true"
			/>			
		<EditTextPreference
			android:key="pref_pcsx_rearmed_bios_file"
			android:title="@string/pref_pcsx_rearmed_bios_file"
			android:summary="@string/pref_pcsx_rearmed_bios_file_summ"
			android:defaultValue=""
			android:persistent="true"
			/>			
		<EditTextPreference
			android:key="pref_pcsx_rearmed_save_dir"
			android:title="@string/pref_pcsx_rearmed_save_dir"
			android:summary="@string/pref_pcsx_rearmed_save_dir_summ"
			android:defaultValue="@string/pref_pcsx_rearmed_path_default"
			android:persistent="true"
			/>			
		<EditTextPreference
			android:key="pref_pcsx_rearmed_memcard1"
			android:title="@string/pref_pcsx_rearmed_memcard1"
			android:summary="@string/pref_pcsx_rearmed_memcard1_summ"
			android:defaultValue="pcsx-mc1.mcd"
			android:persistent="true"
			/>			
		<EditTextPreference
			android:key="pref_pcsx_rearmed_memcard2"
			android:title="@string/pref_pcsx_rearmed_memcard2"
			android:summary="@string/pref_pcsx_rearmed_memcard2_summ"
			android:defaultValue="pcsx-mc2.mcd"
			android:persistent="true"
			/>			
		<EditTextPreference
			android:key="pref_pcsx_rearmed_rom_dir"
			android:defaultValue="@string/pref_pcsx_rearmed_path_default"
			android:persistent="true"
			/>			
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/prefcat_vid"
        android:key="prefcat_vid">
		<ListPreference
			android:key="pref_pcsx_rearmed_frameskip"
			android:title="@string/pref_pcsx_rearmed_frameskip"
			android:summary="@string/pref_pcsx_rearmed_frameskip_summ"
			android:entries="@array/pref_pcsx_rearmed_frameskip_entries"
			android:entryValues="@array/pref_pcsx_rearmed_frameskip_values"
			android:defaultValue="@string/pref_pcsx_rearmed_frameskip_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_neon_interlace_enable"
			android:title="@string/pref_pcsx_rearmed_neon_interlace_enable"
			android:summary="@string/pref_pcsx_rearmed_neon_interlace_enable_summ"
			android:entries="@array/pref_pcsx_rearmed_enabled_disabled_entries"
			android:entryValues="@array/pref_pcsx_rearmed_enabled_disabled_values"
			android:defaultValue="@string/pref_pcsx_rearmed_neon_interlace_enable_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_neon_scaling"
			android:title="@string/pref_pcsx_rearmed_neon_scaling"
			android:summary="@string/pref_pcsx_rearmed_neon_scaling_summ"
			android:entries="@array/pref_pcsx_rearmed_neon_scaling_entries"
			android:entryValues="@array/pref_pcsx_rearmed_neon_scaling_values"
			android:defaultValue="@string/pref_pcsx_rearmed_neon_scaling_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_scanlines"
			android:title="@string/pref_pcsx_rearmed_scanlines"
			android:summary="@string/pref_pcsx_rearmed_scanlines_summ"
			android:entries="@array/pref_pcsx_rearmed_scanlines_entries"
			android:entryValues="@array/pref_pcsx_rearmed_scanlines_values"
			android:defaultValue="@string/pref_pcsx_rearmed_scanlines_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_duping_enable"
			android:title="@string/pref_pcsx_rearmed_duping_enable"
			android:summary="@string/pref_pcsx_rearmed_duping_enable_summ"
			android:entries="@array/pref_pcsx_rearmed_on_off_entries"
			android:entryValues="@array/pref_pcsx_rearmed_on_off_values"
			android:defaultValue="@string/pref_pcsx_rearmed_duping_enable_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_maintain_psx_aspect_ratio"
			android:title="@string/pref_maintain_psx_aspect_ratio"
			android:summary="@string/pref_maintain_psx_aspect_ratio_summ"
			android:entries="@array/pref_pcsx_rearmed_on_off_entries"
			android:entryValues="@array/pref_pcsx_rearmed_on_off_values"
			android:defaultValue="@string/pref_maintain_psx_aspect_ratio_default" 
			android:persistent="true"
			/>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/prefcat_aud"
        android:key="prefcat_aud">
		<ListPreference
			android:key="pref_pcsx_rearmed_spu_reverb"
			android:title="@string/pref_pcsx_rearmed_spu_reverb"
			android:summary="@string/pref_pcsx_rearmed_spu_reverb_summ"
			android:entries="@array/pref_pcsx_rearmed_on_off_entries"
			android:entryValues="@array/pref_pcsx_rearmed_on_off_values"
			android:defaultValue="@string/pref_pcsx_rearmed_spu_reverb_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_spu_interpolation"
			android:title="@string/pref_pcsx_rearmed_spu_interpolation"
			android:summary="@string/pref_pcsx_rearmed_spu_interpolation_summ"
			android:entries="@array/pref_pcsx_rearmed_spu_interpolation_entries"
			android:entryValues="@array/pref_pcsx_rearmed_spu_interpolation_values"
			android:defaultValue="@string/pref_pcsx_rearmed_spu_interpolation_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_spu_irq_always_on"
			android:title="@string/pref_pcsx_rearmed_spu_irq_always_on"
			android:summary="@string/pref_pcsx_rearmed_spu_irq_always_on_summ"
			android:entries="@array/pref_pcsx_rearmed_on_off_entries"
			android:entryValues="@array/pref_pcsx_rearmed_on_off_values"
			android:defaultValue="@string/pref_pcsx_rearmed_spu_irq_always_on_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_disable_xa"
			android:title="@string/pref_pcsx_rearmed_disable_xa"
			android:summary="@string/pref_pcsx_rearmed_disable_xa_summ"
			android:entries="@array/pref_pcsx_rearmed_on_off_entries"
			android:entryValues="@array/pref_pcsx_rearmed_on_off_values"
			android:defaultValue="@string/pref_pcsx_rearmed_disable_xa_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_disable_cdda"
			android:title="@string/pref_pcsx_rearmed_disable_cdda"
			android:summary="@string/pref_pcsx_rearmed_disable_cdda_summ"
			android:entries="@array/pref_pcsx_rearmed_on_off_entries"
			android:entryValues="@array/pref_pcsx_rearmed_on_off_values"
			android:defaultValue="@string/pref_pcsx_rearmed_disable_cdda_default" 
			android:persistent="true"
			/>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/prefcat_inp"
        android:key="prefcat_inp">
		<ListPreference
			android:key="pref_pcsx_rearmed_pad1type"
			android:title="@string/pref_pcsx_rearmed_pad1type"
			android:summary="@string/pref_pcsx_rearmed_pad1type_summ"
			android:entries="@array/pref_pcsx_rearmed_padtype_entries"
			android:entryValues="@array/pref_pcsx_rearmed_padtype_values"
			android:defaultValue="@string/pref_pcsx_rearmed_pad1type_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_emulate_select_start_touchpad_pad1"
			android:title="@string/pref_emulate_select_start_touchpad_pad1"
			android:summary="@string/pref_emulate_select_start_touchpad_summ"
			android:entries="@array/pref_pcsx_rearmed_enabled_disabled_entries"
			android:entryValues="@array/pref_pcsx_rearmed_enabled_disabled_values"
			android:defaultValue="@string/pref_emulate_select_start_touchpad_pad1_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_pcsx_rearmed_pad2type"
			android:title="@string/pref_pcsx_rearmed_pad2type"
			android:summary="@string/pref_pcsx_rearmed_pad2type_summ"
			android:entries="@array/pref_pcsx_rearmed_padtype_entries"
			android:entryValues="@array/pref_pcsx_rearmed_padtype_values"
			android:defaultValue="@string/pref_pcsx_rearmed_pad2type_default" 
			android:persistent="true"
			/>
		<ListPreference
			android:key="pref_emulate_select_start_touchpad_pad2"
			android:title="@string/pref_emulate_select_start_touchpad_pad2"
			android:summary="@string/pref_emulate_select_start_touchpad_summ"
			android:entries="@array/pref_pcsx_rearmed_enabled_disabled_entries"
			android:entryValues="@array/pref_pcsx_rearmed_enabled_disabled_values"
			android:defaultValue="@string/pref_emulate_select_start_touchpad_pad2_default" 
			android:persistent="true"
			/>
    </PreferenceCategory>
</PreferenceScreen>
